partiql/tests/snapshots/pretty__graph_labels_4.snap
---
source: partiql/tests/pretty.rs
expression: doc
---
========================================================================================================================================================================================================
SELECT a,b FROM (g MATCH (a:A&Z) -[e:E&D]-> (b:B&Y))
========================================================================================================================================================================================================

------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
SELECT a, b FROM (g MATCH (a:(A&Z)) -[e:(E&D)]-> (b:(B&Y)))

------------------------------------------------------------------------------------------------------------------------
SELECT a, b FROM (g MATCH (a:(A&Z)) -[e:(E&D)]-> (b:(B&Y)))

--------------------------------------------------------------------------------
SELECT a, b FROM (g MATCH (a:(A&Z)) -[e:(E&D)]-> (b:(B&Y)))

----------------------------------------
SELECT a, b
FROM (g MATCH (a:(A&Z)) -[e:(E&D)]-> (b:(B&Y)))

------------------------------
SELECT a, b
FROM (g MATCH (a:(A&Z)) -[e:(E&D)]-> (b:(B&Y)))

--------------------
SELECT a, b
FROM (g MATCH (a:(A&Z)) -[e:(E&D)]-> (b:(B&Y)))

----------
SELECT a,
  b
FROM (g MATCH (a:(A&Z)) -[e:(E&D)]-> (b:(B&Y)))
