partiql/tests/snapshots/pretty__graph_labels_5.snap
---
source: partiql/tests/pretty.rs
expression: doc
---
========================================================================================================================================================================================================
SELECT a,b FROM (g MATCH (a:(A|Z)&!Y) -[e:E&!D]-> (b:%&!(!B)))
========================================================================================================================================================================================================

------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
SELECT a, b FROM (g MATCH (a:((A|Z)&!(Y))) -[e:(E&!(D))]-> (b:(%&!(!(B)))))

------------------------------------------------------------------------------------------------------------------------
SELECT a, b FROM (g MATCH (a:((A|Z)&!(Y))) -[e:(E&!(D))]-> (b:(%&!(!(B)))))

--------------------------------------------------------------------------------
SELECT a, b FROM (g MATCH (a:((A|Z)&!(Y))) -[e:(E&!(D))]-> (b:(%&!(!(B)))))

----------------------------------------
SELECT a, b
FROM (g MATCH (a:((A|Z)&!(Y))) -[e:(E&!(D))]-> (b:(%&!(!(B)))))

------------------------------
SELECT a, b
FROM (g MATCH (a:((A|Z)&!(Y))) -[e:(E&!(D))]-> (b:(%&!(!(B)))))

--------------------
SELECT a, b
FROM (g MATCH (a:((A|Z)&!(Y))) -[e:(E&!(D))]-> (b:(%&!(!(B)))))

----------
SELECT a,
  b
FROM (g MATCH (a:((A|Z)&!(Y))) -[e:(E&!(D))]-> (b:(%&!(!(B)))))
