partiql/tests/snapshots/pretty__graph_parenthesized_2.snap
---
source: partiql/tests/pretty.rs
expression: doc
---
========================================================================================================================================================================================================
SELECT a,b FROM (g MATCH pathVar = (a:A)[()-[e:Edge]->()]{1,3}(b:B))
========================================================================================================================================================================================================

------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
SELECT a, b FROM g MATCH pathVar = (a:A) [() -[e:Edge]-> ()]{1,3} (b:B)

------------------------------------------------------------------------------------------------------------------------
SELECT a, b FROM g MATCH pathVar = (a:A) [() -[e:Edge]-> ()]{1,3} (b:B)

--------------------------------------------------------------------------------
SELECT a, b FROM g MATCH pathVar = (a:A) [() -[e:Edge]-> ()]{1,3} (b:B)

----------------------------------------
SELECT a, b
FROM g MATCH pathVar = (a:A) [() -[e:Edge]-> ()]{1,3} (b:B)

------------------------------
SELECT a, b
FROM g MATCH pathVar = (a:A) [() -[e:Edge]-> ()]{1,3} (b:B)

--------------------
SELECT a, b
FROM g MATCH pathVar = (a:A) [() -[e:Edge]-> ()]{1,3} (b:B)

----------
SELECT a,
  b
FROM g MATCH pathVar = (a:A) [() -[e:Edge]-> ()]{1,3} (b:B)
