partiql/tests/snapshots/pretty__graph_parenthesized_4.snap
---
source: partiql/tests/pretty.rs
expression: doc
---
========================================================================================================================================================================================================
SELECT a,b FROM (g MATCH pathVar = (a:A)(-[e:Edge]->)*(b:B))
========================================================================================================================================================================================================

------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
SELECT a, b FROM g MATCH pathVar = (a:A) [-[e:Edge]->]* (b:B)

------------------------------------------------------------------------------------------------------------------------
SELECT a, b FROM g MATCH pathVar = (a:A) [-[e:Edge]->]* (b:B)

--------------------------------------------------------------------------------
SELECT a, b FROM g MATCH pathVar = (a:A) [-[e:Edge]->]* (b:B)

----------------------------------------
SELECT a, b
FROM g MATCH pathVar = (a:A) [-[e:Edge]->]* (b:B)

------------------------------
SELECT a, b
FROM g MATCH pathVar = (a:A) [-[e:Edge]->]* (b:B)

--------------------
SELECT a, b
FROM g MATCH pathVar = (a:A) [-[e:Edge]->]* (b:B)

----------
SELECT a,
  b
FROM g MATCH pathVar = (a:A) [-[e:Edge]->]* (b:B)
