partiql/tests/snapshots/pretty__graph_patterns_2.snap
---
source: partiql/tests/pretty.rs
expression: doc
---
========================================================================================================================================================================================================
SELECT a,b FROM g MATCH (a)-[:has]->()-[:contains]->(b)
========================================================================================================================================================================================================

------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
SELECT a, b FROM g MATCH (a) -[:has]-> () -[:contains]-> (b)

------------------------------------------------------------------------------------------------------------------------
SELECT a, b FROM g MATCH (a) -[:has]-> () -[:contains]-> (b)

--------------------------------------------------------------------------------
SELECT a, b FROM g MATCH (a) -[:has]-> () -[:contains]-> (b)

----------------------------------------
SELECT a, b
FROM g MATCH (a) -[:has]-> () -[:contains]-> (b)

------------------------------
SELECT a, b
FROM g MATCH (a) -[:has]-> () -[:contains]-> (b)

--------------------
SELECT a, b
FROM g MATCH (a) -[:has]-> () -[:contains]-> (b)

----------
SELECT a,
  b
FROM g MATCH (a) -[:has]-> () -[:contains]-> (b)
