partiql/tests/snapshots/pretty__graph_patterns_3.snap
---
source: partiql/tests/pretty.rs
expression: doc
---
========================================================================================================================================================================================================
SELECT a,b FROM GRAPH_TABLE (g MATCH (a) -[:has]-> (x), (x)-[:contains]->(b))
========================================================================================================================================================================================================

------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
SELECT a, b FROM GRAPH_TABLE (g MATCH (a) -[:has]-> (x), (x) -[:contains]-> (b))

------------------------------------------------------------------------------------------------------------------------
SELECT a, b FROM GRAPH_TABLE (g MATCH (a) -[:has]-> (x), (x) -[:contains]-> (b))

--------------------------------------------------------------------------------
SELECT a, b FROM GRAPH_TABLE (g MATCH (a) -[:has]-> (x), (x) -[:contains]-> (b))

----------------------------------------
SELECT a, b
FROM GRAPH_TABLE (g MATCH (a) -[:has]-> (x),
    (x) -[:contains]-> (b))

------------------------------
SELECT a, b
FROM GRAPH_TABLE (g MATCH (a) -[:has]-> (x),
    (x) -[:contains]-> (b))

--------------------
SELECT a, b
FROM GRAPH_TABLE (g MATCH (a) -[:has]-> (x),
    (x) -[:contains]-> (b))

----------
SELECT a,
  b
FROM GRAPH_TABLE (g MATCH (a) -[:has]-> (x),
    (x) -[:contains]-> (b))
