partiql/tests/snapshots/pretty__graph_quantifiers_1.snap
---
source: partiql/tests/pretty.rs
expression: doc
---
========================================================================================================================================================================================================
SELECT a,b FROM g MATCH (a:A)-[:edge]->*(b:B)
========================================================================================================================================================================================================

------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
SELECT a, b FROM g MATCH (a:A) -[:edge]->* (b:B)

------------------------------------------------------------------------------------------------------------------------
SELECT a, b FROM g MATCH (a:A) -[:edge]->* (b:B)

--------------------------------------------------------------------------------
SELECT a, b FROM g MATCH (a:A) -[:edge]->* (b:B)

----------------------------------------
SELECT a, b
FROM g MATCH (a:A) -[:edge]->* (b:B)

------------------------------
SELECT a, b
FROM g MATCH (a:A) -[:edge]->* (b:B)

--------------------
SELECT a, b
FROM g MATCH (a:A) -[:edge]->* (b:B)

----------
SELECT a,
  b
FROM g MATCH (a:A) -[:edge]->* (b:B)
